13 December 2024: Yorgos
	- Merge #1204: ci: set persist-credentials: false for actions/checkout
	  per zizmor suggestion.

3 December 2024: Yorgos
	- Merge #1189: Fix the dname_str method to cause conversion errors
	  when the domain name length is 255.
	- Merge #1197: dname_str() fixes.
	- For #1175, the default value of serve-expired-ttl is set to 86400
	  (1 day) as suggested by RFC8767.
	- Merge #1198: Fix log-servfail with serve expired and no useful cache
	  contents.
	- Safeguard alias loop while looking in the cache for expired answers.
	- Merge #1187: Create the SSL_CTX for QUIC before chroot and privilege
	  drop.
	- Fix typo in log_servfail.tdir test.

22 November 2024: Yorgos
	- Fix #1175: serve-expired does not adhere to secure-by-default
	  principle. The default value of serve-expired-client-timeout
	  is set to 1800 as suggested by RFC8767.
	- For #1175, update serve-expired tests.

20 November 2024: Yorgos
	- Fix comparison to help static analyzer.

19 November 2024: Yorgos
	- Merge #1169 from Sergey Kacheev, fix: lock-free counters for
	  auth_zone up/down queries.

15 November 2024: Wouter
	- Fix #1183: the data being used is released in method
	  nsec3_hash_test_entry.
	- Fix for #1183: release nsec3 hashes per test file.

8 November 2024: Yorgos
	- More descriptive text for 'harden-algo-downgrade'.
	- Complete fix for max-global-quota to 200.

6 November 2024: Yorgos
	- Increase the default of max-global-quota to 200 from 128 after
	  operational feedback. Still keeping the possible amplification
	  factor (CAMP related issues) in the hundreds.

5 November 2024: Wouter
	- Fix for the serve expired DNSSEC information fix, it would not allow
	  current delegation information be updated in cache. The fix allows
	  current delegation and validation recursion information to be
	  updated, but as a consequence no longer has certain expired
	  information around for later dnssec valid expired responses.